prevent link breaking wraps

--- a/src/components/v3/UsageAccordion/styles.module.css
+++ b/src/components/v3/UsageAccordion/styles.module.css
@@ -17,6 +17,7 @@
     list-style-image: url("../../../images/list-style-image.png");
     border-bottom: 1px solid #E6E6E6;
     padding: .25rem;
+    overflow-wrap: anywhere;
 }
 
 .usageHeaderTitle {
